updated og images

--- a/src/pages/blog/my-experience-with-astro.mdx
+++ b/src/pages/blog/my-experience-with-astro.mdx
@@ -1,14 +1,16 @@
 ---
 layout: '@layouts/BlogLayout.astro'
-title: "My Experience with Astro 🚀"
+title: "My Experience with Astro"
 description: "I am going to share my experience of using Astro for a month."
-image: "/images/astro-logo.webp"
+image: "/images/og-my-experience-with-astro.webp"
+imageAlt: "OG Image - My Experience with Astro"
 author: "Lance Ross"
 date: "October 02 2022"
 ---
-![Astro Framework Logo](/images/astro-logo.webp)
 
 Hello! This is going to be my very first blog on my website. Today, I'm going to share with you my experience with Astro and its community.
+
+![OG Image - My Experience with Astro](/images/og-my-experience-with-astro.webp)
 
 If you are curious about what is Astro, it is a [static site generator](https://www.cloudflare.com/learning/performance/static-site-generator/) where you can use different JavaScript Frameworks for the UI and ship them as static HTML on the build. It uses "Island Architecture" where Astro extracts your UI into smaller, isolated components on the page. Unused JavaScript is replaced with lightweight static HTML, guaranteeing faster loads on your project.
 
