--- a/src/pages/blog/my-new-astro-template.mdx
+++ b/src/pages/blog/my-new-astro-template.mdx
@@ -2,12 +2,15 @@
 layout: '@layouts/BlogLayout.astro'
 title: "My new Astro Blog Template"
 description: "I just want to share my blog template that I created using Astro and Tailwind!"
-image: "/images/astro-logo.webp"
+image: "/images/og-my-new-astro-template.webp"
+imageAlt: "OG Image - My new Astro Blog Template"
 author: "Lance Ross"
 date: "October 18 2022"
 ---
 
 Hey there! It's been many weeks since my latest blog post. I've been busy with work and other projects. I just want to share my blog template that I created using Astro and Tailwind CSS!
+
+![OG Image - My new Astro Blog Template](/images/og-my-new-astro-template.webp)
 
 ## The story
 So, I got bored and I decided to create a blog template using Astro and Tailwind CSS. I've been using Astro for a while now and I really like it, so I decided to create this blog template so I can contribute more into Astro Community! I also used Tailwind CSS because I really like it and it's easy to use.
