--- a/src/pages/blog/my-experience-with-astro.mdx
+++ b/src/pages/blog/my-experience-with-astro.mdx
@@ -16,4 +16,6 @@ If you are curious about what is Astro, it is a [static site generator](https://
 
 I started using [Astro](https://astro.build) last month because of its cool templates, to begin with, and it’s easy to use for beginners. For my first project, I picked the default template which is going to be my new personal website. At first, I was confused about where to start, so I just checked the docs so I can learn with them. It was also my first time using components so I can reuse them on other pages too.
 
-I was getting used to it while focusing on making my website look beautiful. I started to actually learn how does Astro work and how do you actually create your own website with it? I tried deleting all the default components and started to make my own (without ready-made components that I just found on the internet). I am getting a lot of positive feedback about my site that it looks beautiful and others. After many weeks of learning it, I finally built this beautiful website of mine using Astro and [Tailwind CSS](https://tailwindcss.com) 😍
+I was getting used to it while focusing on making my website look beautiful. I started to learn how does Astro work and how do you create your website with it? I tried deleting all the default components and started to make my own (without ready-made components that I just found on the internet). I am getting a lot of positive feedback about my site that it looks beautiful. After a few weeks of learning it, I finally built this beautiful website of mine using Astro and [Tailwind CSS](https://tailwindcss.com) 😍
+
+That's it for now! I hope you enjoyed reading this blog post! If you have any questions, feel free to ask me on [Twitter](https://twitter.com/lancerossdev) or [GitHub](https://github.com/lancerossdev)! I'll be happy to answer your questions!
