change image & fixed typo

--- a/src/pages/blog/my-new-astro-template.mdx
+++ b/src/pages/blog/my-new-astro-template.mdx
@@ -29,7 +29,7 @@ This is a basic blog template I created using Astro and Tailwind CSS. It’s a s
 
 Well, I wanted to create a blog template because I want to contribute more to Astro and have a project to showcase on my portfolio. I wanted a blog template for anyone out there who wants to try Astro for the first time. I wanted a blog template that is simple, fast, and easy to use.
 
-## Wow! It looks cool. How did create this?
+## Wow! It looks cool. How did you create this?
 
 I started to create this template from scratch and I was planning to use it with Tailwind CSS and TypeScript. I didn’t add any JavaScript Frameworks and Libraries out there because Astro does all the job for you!
 
