--- a/src/pages/blog/my-new-astro-template.mdx
+++ b/src/pages/blog/my-new-astro-template.mdx
@@ -2,22 +2,18 @@
 layout: '@layouts/BlogLayout.astro'
 title: "My new Astro Blog Template"
 description: "I just want to share the blog template that I created using Astro and Tailwind!"
-image: "/images/og-my-new-astro-template.webp"
-imageAlt: "OG Image - My new Astro Blog Template"
 author: "Lance Ross"
-date: "October 18 2022"
+pubDate: "October 18, 2022"
 ---
 
 Hey there! It’s been many weeks since my latest blog post. I’ve been busy with work and other projects. I just want to share the blog template that I created using Astro and Tailwind CSS!
-
-![OG Image - My new Astro Blog Template](/images/og-my-new-astro-template.webp)
 
 ## The story
 
 So, I got bored and I decided to create a blog template using Astro and Tailwind CSS. I've been using Astro for a while now and I like it, so I decided to create this blog template so I can contribute more to Astro Community! I also used Tailwind CSS because I like it and it's easy to use.
 
 Here is a quick preview of the template:
-![Preview](/images/website-preview.webp)
+![Website Preview](/static/website-preview.webp)
 
 Looks simple but cool, isn't it? You can find the demo here at [basicblog.lanceross.xyz](https://basicblog.lanceross.xyz) and if you want to take a look at the GitHub repository, you can find it here on my [GitHub](https://github.com/lancerossdev/astro-basic-blog).
 
