removed og generator
I also updated stuffs

--- a/src/pages/blog/my-new-astro-template.mdx
+++ b/src/pages/blog/my-new-astro-template.mdx
@@ -2,6 +2,7 @@
 layout: '@layouts/BlogLayout.astro'
 title: "My new Astro Blog Template"
 description: "I just want to share the blog template that I created using Astro and Tailwind!"
+ogimage: "/assets/my-new-astro-template.png"
 author: "Lance Ross"
 pubDate: "October 17, 2022"
 ---
