--- a/src/pages/blog/my-experience-with-astro.mdx
+++ b/src/pages/blog/my-experience-with-astro.mdx
@@ -6,6 +6,8 @@ ogimage: "/assets/my-experience-with-astro.png"
 author: "Lance Ross"
 pubDate: "October 02, 2022"
 ---
+import BlogImage from "@components/BlogImage.astro"
+import OldSite from "@images/oldsite.png"
 
 Hello! This is going to be my very first blog on my website. Today, I'm going to share with you my experience with Astro and its community.
 
@@ -14,7 +16,8 @@ If you are curious about what is Astro, it is a [static site generator](https://
 I started using [Astro](https://astro.build) last month because of its cool templates, to begin with, and it’s easy to use for beginners. For my first project, I picked the default template which is going to be my new personal website. At first, I was confused about where to start, so I just checked the docs so I can learn with them. It was also my first time using components so I can reuse them on other pages too.
 
 This is what my website was when I just started Astro looks like, you can find how my site looks like back then on [Wayback Machine](https://web.archive.org/web/20220000000000*/lanceross.xyz). I don't always update it on Wayback Machine because it takes a lot of time to do it manually and they don't crawl my website 😅.
-![My website when I started Astro](/static/old-site-preview.webp)
+
+<BlogImage src={OldSite} alt="Old Website Preview" />
 
 I was getting used to it while focusing on making my website look beautiful. I started to learn how does Astro work and how do you create your website with it? I tried deleting all the default components and started to make my own (without ready-made components that I just found on the internet). I am getting a lot of positive feedback about my site that it looks beautiful. After a few weeks of learning it, I finally built this beautiful website of mine using Astro and [Tailwind CSS](https://tailwindcss.com) 😍
 
