final changes for revamp

--- a/src/pages/blog/my-experience-with-astro.mdx
+++ b/src/pages/blog/my-experience-with-astro.mdx
@@ -19,6 +19,6 @@ This is what my website was when I just started Astro looks like, you can find h
 
 <BlogImage src={OldSite} alt="Old Website Preview" />
 
-I was getting used to it while focusing on making my website look beautiful. I started to learn how does Astro work and how do you create your website with it? I tried deleting all the default components and started to make my own (without ready-made components that I just found on the internet). I am getting a lot of positive feedback about my site that it looks beautiful. After a few weeks of learning it, I finally built this beautiful website of mine using Astro and [Tailwind CSS](https://tailwindcss.com) 😍
+I was getting used to it while focusing on making my website look beautiful. I started to learn how does Astro work and how do you create your website with it? I tried deleting all the default components and started to make my own (without ready-made components that I just found on the internet). I am getting a lot of positive feedback about my site that it looks beautiful. After a few weeks of learning it, I finally built this beautiful website of mine using Astro and Tailwind CSS 😍
 
 That's it for now! I hope you enjoyed reading this blog post! If you have any questions, feel free to ask me on [Twitter](https://twitter.com/lancerossdev) or [GitHub](https://github.com/lancerossdev)! I'll be happy to answer your questions!
