added og generator

--- a/src/pages/blog/my-new-astro-template.mdx
+++ b/src/pages/blog/my-new-astro-template.mdx
@@ -2,7 +2,7 @@
 layout: '@layouts/BlogLayout.astro'
 title: "My new Astro Blog Template"
 description: "I just want to share the blog template that I created using Astro and Tailwind!"
-ogimage: "/assets/my-new-astro-template.png"
+ogimage: "https://og.lanceross.xyz/og?title=My%20new%20Astro%20Blog%20Template"
 author: "Lance Ross"
 pubDate: "October 17, 2022"
 ---
