--- a/src/pages/blog/my-experience-with-astro.mdx
+++ b/src/pages/blog/my-experience-with-astro.mdx
@@ -2,7 +2,7 @@
 layout: '@layouts/BlogLayout.astro'
 title: "My Experience with Astro"
 description: "I am going to share my experience of using Astro for a month."
-ogimage: "/assets/my-experience-with-astro.png"
+ogimage: "https://og.lanceross.xyz/og?title=My%20Experience%20with%20Astro"
 author: "Lance Ross"
 pubDate: "October 02, 2022"
 ---
