og image on edge

--- a/src/pages/blog/my-experience-with-astro.mdx
+++ b/src/pages/blog/my-experience-with-astro.mdx
@@ -1,9 +1,7 @@
 ---
 layout: '@layouts/BlogLayout.astro'
-title: "My Experience with Astro"
+title: My Experience with Astro
 description: "I am going to share my experience of using Astro for a month."
-ogimage: "https://og.lanceross.xyz/og?title=My%20Experience%20with%20Astro"
-author: "Lance Ross"
 pubDate: "October 02, 2022"
 ---
 import BlogImage from "@components/BlogImage.astro"
