fixed blog cards and designs

--- a/src/pages/blog/my-new-astro-template.mdx
+++ b/src/pages/blog/my-new-astro-template.mdx
@@ -1,7 +1,7 @@
 ---
 layout: '@layouts/BlogLayout.astro'
 title: My new Astro Blog Template
-description: "I just want to share the blog template that I created using Astro and Tailwind!"
+description: "I just want to share the blog template that I did using Astro and Tailwind!"
 pubDate: "October 17, 2022"
 ---
 import BlogImage from "@components/BlogImage.astro"
@@ -28,8 +28,6 @@ Well, I wanted to create a blog template because I want to contribute more to As
 
 ## Wow! It looks cool. How did you create this?
 
-I started to create this template from scratch and I was planning to use it with Tailwind CSS and TypeScript. I didn’t add any JavaScript Frameworks and Libraries out there because Astro does all the job for you!
-
-Feel free to add your content and customize it to your liking and I hope you enjoy using this template! Make sure to follow me on Twitter for updates about me and GitHub for my latest projects out there!
+I started to create this template from scratch and I was planning to use it with Tailwind CSS and TypeScript. I didn’t add any JavaScript Frameworks and Libraries out there because Astro does all the job for you! Feel free to add your content and customize it to your liking and I hope you enjoy using this template!
 
 That's it for now! I hope you enjoyed reading this blog post and using my blog template! If you have any questions, feel free to ask me on [Twitter](https://twitter.com/lancerossdev) or [GitHub](https://github.com/lancerossdev)! I'll be happy to answer your questions!
