added prefer reduce motion styles

--- a/src/pages/blog/my-new-astro-template.mdx
+++ b/src/pages/blog/my-new-astro-template.mdx
@@ -22,7 +22,7 @@ Looks simple but cool, isn't it? You can find the demo here at [basicblog.lancer
 
 This is a basic blog template I created using Astro and Tailwind CSS. It’s a simple blog template that you can use to create your blog. It’s not a complex template, but it’s a good starting point for you to create your blog. It is SEO friendly, blazingly fast and it’s also responsive.
 
-## Why did you created this template?
+## Why did you create this template?
 
 Well, I wanted to create a blog template because I want to contribute more to Astro and have a project to showcase on my portfolio. I wanted a blog template for anyone out there who wants to try Astro for the first time. I wanted a blog template that is simple, fast, and easy to use.
 
