change alt text and edit metadata

--- a/src/pages/blog/self-host-umami-analytics.mdx
+++ b/src/pages/blog/self-host-umami-analytics.mdx
@@ -25,7 +25,7 @@ Make sure you have a Supabase and Vercel Account. If you don't have one, you can
 ### Step 1: Create a Supabase Project
 Go to [Supabase](https://supabase.io) and create a new project. You can choose any plan that you want and a close region where you're going to host your project. Make sure to set a **strong password** for your database!
 
-<BlogImage src={CreateProject} alt="Create Project" />
+<BlogImage src={CreateProject} alt="Create Project in Supabase" />
 
 Get the database connection string from the Settings > Database page, then scroll to the bottom for the Connection Pooling section and copy the Connection string. It should look something like this: 
 ```bash
