reword stuffs & another fix

--- a/src/pages/blog/astro-basic-blog.mdx
+++ b/src/pages/blog/astro-basic-blog.mdx
@@ -1,6 +1,6 @@
 ---
-title: My new Astro Blog Template
-description: "I just want to share the blog template that I did using Astro and Tailwind!"
+title: Astro Basic Blog Template
+description: "I just want to share the blog template that I did using Astro!"
 pubDate: "October 17, 2022"
 ---
 import BlogImage from "@components/BlogImage.astro"
@@ -15,7 +15,7 @@ So, I got bored and I decided to create a blog template using Astro and Tailwind
 Here is a quick preview of the template:
 <BlogImage src={basicblog} alt="Basic Blog Preview" />
 
-Looks simple but cool, isn't it? You can find the demo here at [basicblog.lanceross.xyz](https://basicblog.lanceross.xyz) and if you want to take a look at the GitHub repository, you can find it here on my [GitHub](https://github.com/lancerossdev/astro-basic-blog).
+Looks simple but cool, isn't it? You can find the demo here at [astrobasic.vercel.app](https://astrobasic.vercel.app) and if you want to take a look at the GitHub repository, you can find it here on my [GitHub](https://github.com/lancerossdev/basicblog).
 
 ## What is this thing?
 
