--- a/src/pages/blog/local-dev-environment.mdx
+++ b/src/pages/blog/local-dev-environment.mdx
@@ -1,6 +1,6 @@
 ---
 title: Setting up my local dev environment
-description: "I will show you how to setup a local dev environment using VSCode, Terminal, WSL and more!"
+description: "I will show you how to setup a dev environment using VSCode and WSL"
 pubDate: "December 8, 2022"
 ---
 
@@ -12,7 +12,7 @@ It’s been many months since I started in my web development journey but still 
 
 For today, I will show you how to setup a local dev environment using awesome tools from Microsoft like VSCode, Terminal, WSL and more!
 
-## Install WSL and Ubuntu 🐧
+## Install WSL and Ubuntu
 
 ### Step 1: Enable WSL and VMP
 
