--- a/src/pages/blog/migrated-to-vercel.mdx
+++ b/src/pages/blog/migrated-to-vercel.mdx
@@ -1,6 +1,6 @@
 ---
-title: I just migrated to Vercel and I fell inlove with it
-description: "After testing out different app deployment services, I decided to choose Vercel and here's why."
+title: I just migrated to Vercel
+description: "I chose Vercel as my new app deployment platform and here's why."
 pubDate: "December 12, 2022"
 ---
 
