new blog and update links

--- a/src/pages/blog/vercel.mdx
+++ b/src/pages/blog/vercel.mdx
@@ -11,7 +11,7 @@ I’ve been using many static site hosts for my projects and especially for my p
 
 ## Why Vercel?
 
-I chose Vercel because of its better quality service than other providers out there. It offers a blazing-fast network and many more products that I like which are Next.js, [`@vercel/og`](https://github.com/vercel/satori) and many more.
+I chose Vercel because of its better quality service than other providers out there. It offers a blazing-fast network and many more products that I like which are Next.js, `@vercel/og` and many more.
 
 
 ## How did I migrate from Netlify to Vercel?
@@ -36,7 +36,7 @@ Since my projects are just made with Astro, it is easy to migrate them. I just c
 
 ## But, there’s an issue…
 
-For my Open Graph Images, I use Netlify Edge Functions to generate them. I don’t know what to do until I found [`@vercel/og`](https://github.com/vercel/satori) and it was awesome! The Netlify version from [Matt Kane](https://twitter.com/ascorbic) is great since Netlify just bundles the edge function to your static site like magic. But, Vercel is different. You need to install the [`@vercel/og`](https://github.com/vercel/satori) package and you need to use Next.js and React to use it. I don’t know how to use Next.js and React so I learned a bit about it and I managed to make it work. You can check out my [Open Graph Image Generator](https://images.lanceross.xyz) to see how it works.
+For my Open Graph Images, I use Netlify Edge Functions to generate them. I don’t know what to do until I found `@vercel/og` and it was awesome! The Netlify version from [Matt Kane](https://twitter.com/ascorbic) is great since Netlify just bundles the edge function to your static site like magic. But, Vercel is different. You need to install the [`@vercel/og`](https://github.com/vercel/satori) package and you need to use Next.js and React to use it. I don’t know how to use Next.js and React so I learned a bit about it and I managed to make it work. You can check out my [Open Graph Image Generator](https://github.com/lancerossdev/satori) to see how it works.
 
 
 ## Conclusion
