--- a/src/pages/blog/hello.mdx
+++ b/src/pages/blog/hello.mdx
@@ -6,7 +6,7 @@ pubDate: "February 14 2023"
 
 Hello!
 
-You hit my very first blog post. Hopefully the enxt time you're here, there will be something new!
+You hit my very first blog post. Hopefully the next time you're here, there will be something new!
 
 For now, this will be my only post, but I want to write some technical walkthroughs of my projects
 
